in Isabelle/Scala (e.g. see isabelle.Bibtex.File_Format), configured via
the shell function "isabelle_file_format" in etc/settings (e.g. of an
Isabelle component).


*** Isar ***

* More robust treatment of structural errors: begin/end blocks take
precedence over goal/proof.

* Implicit cases goal1, goal2, goal3, etc. have been discontinued
(legacy feature since Isabelle2016).


*** HOL ***

* Simplified syntax setup for big operators under image. In rare
situations, type conversions are not inserted implicitly any longer
and need to be given explicitly. Auxiliary abbreviations INFIMUM,
SUPREMUM, UNION, INTER should now rarely occur in output and are just
retained as migration auxiliary. INCOMPATIBILITY.

* Theory List: the precedence of the list_update operator has changed:
"f a [n := x]" now needs to be written "(f a)[n := x]".

* Theory "HOL-Library.Multiset": the <Union># operator now has the same
precedence as any other prefix function symbol.

* Retired lemma card_Union_image; use the simpler card_UN_disjoint instead.

* Facts sum_mset.commute and prod_mset.commute renamed to sum_mset.swap
and prod_mset.swap, similarly to sum.swap and prod.swap.
INCOMPATIBILITY.

* Strong congruence rules (with =simp=> in the premises) for constant f
are now uniformly called f_cong_simp, in accordance with congruence
rules produced for mappers by the datatype package. INCOMPATIBILITY.

* Sledgehammer: The URL for SystemOnTPTP, which is used by remote
provers, has been updated.

* SMT: reconstruction is now possible using the SMT solver veriT.

* HOL-Library.Simps_Case_Conv: case_of_simps now supports overlapping 
and non-exhaustive patterns and handles arbitrarily nested patterns.
It uses on the same algorithm as HOL-Library.Code_Lazy, which assumes
sequential left-to-right pattern matching. The generated
equation no longer tuples the arguments on the right-hand side.
INCOMPATIBILITY.

* Session HOL-SPARK: .prv files are no longer written to the